# virtualize

./: .gitignore  .virtualize_autostart.sh  AGENTS.md  README.md  bootstrap.sh  mcp-config.json  pyproject.toml
src/virtualize/: __init__.py
src/virtualize/agent/: __init__.py  nl_agent.py
src/virtualize/api/: dashboard.py  server.py
src/virtualize/cli/: main.py
src/virtualize/compliance/: audit.py  policies.py
src/virtualize/core/: algebra.py  bootstrap.py  hypervisor.py  manager.py  mock_hypervisor.py  models.py
src/virtualize/mcp_server/: __main__.py  server.py
src/virtualize/sandbox/: executor.py
tests/: test_agent.py  test_algebra.py  test_api.py  test_compliance.py  test_models.py
